# VibeFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml  release.yml
legacy_prototype/: lib.rs  main.rs
legacy_prototype/modules/: audio.rs  gui.rs  inference.rs  llm.rs  os_integration.rs  ui.rs
scripts/: check-deps.ps1  install-shortcut.ps1  setup-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/modules/: audio.rs  commands.rs  inference.rs  linux_paste.rs  llm.rs  os_integration.rs  state.rs
ui/: index.html
ui/src/: App.vue  style.css
ui/src/components/: Overlay.vue  Settings.vue  Wizard.vue
