[package]
name = "vibeflow"
version = "0.3.3"
description = "VibeFlow"
authors = ["DerJannik"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["image-png", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-log = "2.0.0"
window-vibrancy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
rodio = "0.17" # For feedback sounds
log = "0.4"
num_cpus = "1.16"
hound = "3.5"
enigo = "0.1"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
arboard = "3.4"
active-win-pos-rs = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
webrtc-vad = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
sysinfo = "0.30"
once_cell = "1.18"
lazy_static = "1.4"
base64 = "0.21"
whisper-rs = "0.13"
nnnoiseless = "0.5.2"
tract-onnx = "0.21.13"
tract-core = "0.21.13"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
